--- a/src/qt/bitcoin.qrc
+++ b/src/qt/bitcoin.qrc
@@ -1,11 +1,11 @@
 <RCC>
     <qresource prefix="/icons">
-        <file alias="bitcoin">res/icons/CapriCoin.png</file>
-		<file alias="drmbg">res/icons/CapriCoin-256.png</file>
+        <file alias="bitcoin">res/icons/Capricoin.png</file>
+		<file alias="drmbg">res/icons/Capricoin-256.png</file>
         <file alias="address-book">res/icons/address-book.png</file>
         <file alias="quit">res/icons/quit.png</file>
         <file alias="send">res/icons/send.png</file>
-        <file alias="toolbar">res/icons/CapriCoin-16.png</file>
+        <file alias="toolbar">res/icons/Capricoin-16.png</file>
         <file alias="connect_0">res/icons/connect0_16.png</file>
         <file alias="connect_1">res/icons/connect1_16.png</file>
         <file alias="connect_2">res/icons/connect2_16.png</file>
@@ -24,8 +24,8 @@
         <file alias="editpaste">res/icons/editpaste.png</file>
         <file alias="editcopy">res/icons/editcopy.png</file>
         <file alias="add">res/icons/add.png</file>
-        <file alias="bitcoin_testnet">res/icons/CapriCoin.png</file>
-        <file alias="toolbar_testnet">res/icons/CapriCoin-16.png</file>
+        <file alias="bitcoin_testnet">res/icons/Capricoin.png</file>
+        <file alias="toolbar_testnet">res/icons/Capricoin-16.png</file>
         <file alias="edit">res/icons/edit.png</file>
         <file alias="history">res/icons/history.png</file>
         <file alias="overview">res/icons/overview.png</file>
