--- a/src/qt/forms/aboutdialog.ui
+++ b/src/qt/forms/aboutdialog.ui
@@ -92,8 +92,10 @@
        </property>
        <property name="text">
         <string>Copyright © 2009-2014 The Bitcoin developers
-Copyright © 2012-2014 The NovaCoin developers
-Copyright © 2015-2017 The Capricoin developers</string>
+Copyright © 2011-2012 PPCoin Developers
+Copyright © 2013-2014 The NovaCoin developers
+Copyright © 2014 BlackCoin Developers
+Copyright © 2015-2019 The Capricoin developers</string>
        </property>
        <property name="textInteractionFlags">
         <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
